--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,28 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-06-01 Sat 11:38]
+#+CAPTION: Clock summary at [2019-06-01 Sat 12:34]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *51:04* |       |       | 100.0 |
+| *Total time*                                           | *51:59* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 51:04   |       |       | 100.0 |
-| Active                                                 |         | 51:04 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  3:37 |   7.1 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   7.4 |
-| Sprint and product backlog grooming                    |         |       |  3:32 |   6.9 |
-| Make wale templates meta-model elements                |         |       |  2:45 |   5.4 |
+| Stories                                                | 51:59   |       |       | 100.0 |
+| Active                                                 |         | 51:59 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  3:37 |   7.0 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   7.2 |
+| Sprint and product backlog grooming                    |         |       |  3:32 |   6.8 |
+| Make wale templates meta-model elements                |         |       |  2:45 |   5.3 |
 | Flatten the data directory                             |         |       |  1:11 |   2.3 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.5 |
-| Rename coding model                                    |         |       |  2:17 |   4.5 |
+| Rename coding model                                    |         |       |  2:17 |   4.4 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   1.0 |
-| Consider a test suite level logging flag               |         |       |  1:40 |   3.3 |
-| Move parent processing to injection                    |         |       |  2:06 |   4.1 |
+| Consider a test suite level logging flag               |         |       |  1:40 |   3.2 |
+| Move parent processing to injection                    |         |       |  2:06 |   4.0 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   4.4 |
 | Fix issues with nightly build and CI                   |         |       |  0:04 |   0.1 |
 | Read variability papers                                |         |       |  0:56 |   1.8 |
-| Use generated static configurations in transforms      |         |       | 26:09 |  51.2 |
+| Use generated static configurations in transforms      |         |       | 27:04 |  52.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -514,6 +514,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Use generated static configurations in transforms         :story:
     :LOGBOOK:
+    CLOCK: [2019-06-01 Sat 11:39]--[2019-06-01 Sat 12:34] =>  0:55
     CLOCK: [2019-06-01 Sat 10:45]--[2019-06-01 Sat 11:11] =>  0:26
     CLOCK: [2019-05-31 Fri 20:29]--[2019-05-31 Fri 20:30] =>  0:01
     CLOCK: [2019-05-31 Fri 15:26]--[2019-05-31 Fri 15:34] =>  0:08
@@ -642,6 +643,20 @@ Notes:
   fields are used separately. This is not too bad, we can keep this
   approach. We just need to supply the feature model into the gatherer
   and repeat the logic with the static configuration.
+- when we are using templates other than instance, they must all be of
+  the same template kind on a given bundle. Then, we can ask the
+  selector for all features for a given name across the entity that we
+  are expanding (facet, backend, archetype). Actually we made a
+  mistake in modeling feature bundles. In reality, some of the
+  properties we placed at the template level are actually bundle
+  properties:
+  - template kind
+  - location
+  then we can use the location properties to query for the features:
+  if we only have the backend, we can ask for all features that match
+  the backend.
+
+
 
 Approach:
 
