--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,30 +13,30 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-06-02 Sun 17:01]
+#+CAPTION: Clock summary at [2019-06-02 Sun 17:14]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *59:15* |       |       | 100.0 |
+| *Total time*                                           | *59:27* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 59:15   |       |       | 100.0 |
-| Active                                                 |         | 59:15 |       | 100.0 |
+| Stories                                                | 59:27   |       |       | 100.0 |
+| Active                                                 |         | 59:27 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  3:37 |   6.1 |
-| Create a video demo for the previous sprint's features |         |       |  3:46 |   6.4 |
-| Sprint and product backlog grooming                    |         |       |  3:32 |   6.0 |
+| Create a video demo for the previous sprint's features |         |       |  3:46 |   6.3 |
+| Sprint and product backlog grooming                    |         |       |  3:32 |   5.9 |
 | Make wale templates meta-model elements                |         |       |  2:45 |   4.6 |
 | Flatten the data directory                             |         |       |  1:11 |   2.0 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       |  0:15 |   0.4 |
-| Rename coding model                                    |         |       |  2:17 |   3.9 |
+| Rename coding model                                    |         |       |  2:17 |   3.8 |
 | Windows build is failing on a number of tests          |         |       |  0:30 |   0.8 |
 | Consider a test suite level logging flag               |         |       |  1:40 |   2.8 |
 | Move parent processing to injection                    |         |       |  2:06 |   3.5 |
-| Use generated static configurations in transforms      |         |       | 30:16 |  51.1 |
+| Use generated static configurations in transforms      |         |       | 30:16 |  50.9 |
 | Remove serialisation support in dia model              |         |       |  0:28 |   0.8 |
 | Windows clang-cl release build is failing 4 tests      |         |       |  2:16 |   3.8 |
 | Fix issues with nightly build and CI                   |         |       |  0:04 |   0.1 |
 | Read variability papers                                |         |       |  0:56 |   1.6 |
-| Element extensions considered harmful                  |         |       |  3:36 |   6.1 |
+| Element extensions considered harmful                  |         |       |  3:48 |   6.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -712,6 +712,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Element extensions considered harmful                     :story:
     :LOGBOOK:
+    CLOCK: [2019-06-02 Sun 17:02]--[2019-06-02 Sun 17:14] =>  0:12
     CLOCK: [2019-06-02 Sun 13:25]--[2019-06-02 Sun 17:01] =>  3:36
     :END:
 
